# Hex-Core

./: .gitignore  .prettierignore  .prettierrc.cjs  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.docs/design/: README.md
.docs/history/: README.md
.docs/plan/: README.md
.docs/references/: README.md
.docs/trashcan/: README.md
.docs/wanto/: README.md
.github/workflows/: pre-merge-check.yml  workspace-skeleton-check.yml
DOCUMENTS/: Commands.md  TechStack.md
core/: Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml  tauri.conf.json
core/capabilities/: default.json
core/src/: lib.rs  main.rs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
web/: .prettierignore  .prettierrc.cjs  README.md  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
