# @/core/Cargo.toml - Rust 后端依赖与构建配置
# - ./src/lib.rs
# - ./tauri.conf.json

[package]
name = "hex-core-app"
version = "0.1.0"
description = "A cross-platform local AI agent app template"
license = "GPL-2.0-only"
repository = "https://github.com/Hexlinepusher/Hex-Core"
edition = "2021"
rust-version = "1.88.0"

[lib]
name = "hex_core_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
